--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <td><img src="Fiesta farolillos Tailandia_.jpeg" alt="Imagem Fiesta farolillos Tailandia" width="120"> </td>
             </tr>
         </table>
-       Eu compartilho meus etudos no meu Linkedin, fique a vontade para ver meu conteúdo por lá:  <a href="https://www.linkedin.com/in/leticiakistenmacher/">Meu linkedin</a>
+       Eu compartilho meus estudos no meu Linkedin, fique a vontade para ver meu conteúdo por lá:  <a href="https://www.linkedin.com/in/leticiakistenmacher/">Meu linkedin</a>
     </p>
     <script src="script.js"></script>
 </body>
